--- a/css/light-mode css/light-mode home.css
+++ b/css/light-mode css/light-mode home.css
@@ -11,8 +11,8 @@
 .ui-bookmark {
     --icon-size: 24px;
     --icon-secondary-color: rgb(0, 0, 0);
-    --icon-hover-color: rgb(43, 43, 43);
-    --icon-primary-color: rgb(252, 54, 54);
+    --icon-hover-color: rgb(110, 110, 110);
+    --icon-primary-color: rgb(241, 115, 0);
     --icon-circle-border: 1px solid var(--icon-primary-color);
     --icon-circle-size: 35px;
     --icon-anmt-duration: 0.3s;
@@ -219,144 +219,147 @@ input[type=text]{
 }
 
 body {
-    margin: 0;
-    height: 100vh;
-    display: grid;
-    grid-template-columns: 50px 1fr;
-    grid-template-rows: 50px 1fr;
-    grid-template-areas:
-        "top-left top"
-        "left main";
-    font-family: "Roboto", serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-        "wdth" 100;
-    color: rgb(0, 0, 0);
-    transition: background-color 0.3s ease, color 0.3s ease, grid-template-columns 0.3s ease;
+  margin: 0;
+  height: 100vh;
+  display: grid;
+  grid-template-columns: 50px 1fr;
+  grid-template-rows: 50px 1fr;
+  grid-template-areas:
+      "top-left top"
+      "left main";
+  font-family: "Roboto", serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings:
+      "wdth" 100;
+  color: rgb(0, 0, 0);
+  transition: background-color 0.3s ease, color 0.3s ease, grid-template-columns 0.3s ease;
 }
 
 body:has(.left.expanded) {
-    grid-template-columns: 200px 1fr;
+  grid-template-columns: 200px 1fr;
 }
 
 .top-left {
-    grid-area: top-left;
-    background-color: #ffffff;
-    z-index: 2;
-    transition: background-color 0.3s ease;
+  grid-area: top-left;
+  background-color: #ffffff;
+  z-index: 2;
+  transition: background-color 0.3s ease;
 }
 
 .top {
-    grid-area: top;
-    background-color: #ffffff;
-    box-shadow: 1px 0 5px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  grid-area: top;
+  background-color: #ffffff;
+  box-shadow: 1px 0 5px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
 .top h1 {
-    color: #000000;
-    margin: 0;
-    font-weight: 500;
-    transition: color 0.3s ease;
+  color: #000000;
+  margin: 0;
+  font-weight: 500;
+  transition: color 0.3s ease;
 }
 
 .left {
-    grid-area: left;
-    background-color: #ffffff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: nowrap;
-    flex-direction: column;
-    gap: 20px;
-    box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-    z-index: 1;
-    transition: background-color 0.3s ease, box-shadow 0.3s ease;
-    position: sticky;
-    top: 0;
-    height: 100vh;
-    overflow: hidden;
+  grid-area: left;
+  background-color: #ffffff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: nowrap;
+  flex-direction: column;
+  gap: 20px;
+  box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
+  z-index: 1;
+  transition: background-color 0.3s ease, box-shadow 0.3s ease;
+  position: sticky;
+  top: 0;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .left-icons {
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    gap: 20px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  gap: 20px;
 }
 
 .left-icons hr {
-    width: 50px;
-    max-width: 70%;
-    height: 2px;
-    background-color: #000000;
-    border: 0px solid black;
-    transition: background-color 0.3s ease;
+  width: 50px;
+  max-width: 70%;
+  height: 2px;
+  background-color: #000000;
+  border: 0px solid black;
+  transition: background-color 0.3s ease;
+}
+
+.link-size {
+  width: 100%;
+  height: 100%;
 }
 
 .main {
-    grid-area: main;
-    background-color: #f0f0f0;
-    transition: background-color 0.3s ease;
-    padding: 20px 0px 20px 0px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  grid-area: main;
+  background-color: #f0f0f0;
+  transition: background-color 0.3s ease;
+  padding: 20px 0px 20px 0px;
 }
 
 .left-icons .material-symbols-outlined {
-    font-size: 35px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 50px;
-    transition: background-color 0.5s ease, color 0.3s ease;
-    overflow: hidden;
+  font-size: 35px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  transition: background-color 0.5s ease, color 0.3s ease;
+  overflow: hidden;
 }
 
 .left-icons .material-symbols-outlined:hover {
-    background-color: rgba(0, 0, 0, 0.1);
-    width: 50px;
-    cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 50px;
+  cursor: pointer;
 }
 
 /* Tooltip szöveg */
 .left-icons .material-symbols-outlined::after {
-    content: attr(data-tooltip); /* A data-tooltip attribútum felhasználása a hovernek szükséges szövegnek */
-    position: absolute;
-    left: 100%;
-    background-color: #000000;
-    color: #ffffff;
-    padding: 5px 10px;
-    border-radius: 4px;
-    font-size: 14px;
-    font-family: "Roboto", serif;
-    white-space: nowrap; /* A szöveg letiltása a wrappeléstől */
-    opacity: 0; /* A szöveg eltüntetése alapból */
-    pointer-events: none; /* A tooltip letiltása a hover letiltásáról */
-    transition: opacity 0.3s ease;
-    margin-left: 10px;
+  content: attr(data-tooltip); /* A data-tooltip attribútum felhasználása a hovernek szükséges szövegnek */
+  position: absolute;
+  left: 100%;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 5px 10px;
+  border-radius: 4px;
+  font-size: 14px;
+  white-space: nowrap; /* A szöveg letiltása a wrappeléstől */
+  opacity: 0; /* A szöveg eltüntetése alapból */
+  pointer-events: none; /* A tooltip letiltása a hover letiltásáról */
+  transition: opacity 0.3s ease;
+  margin-left: 10px;
 }
 
 .left-icons .material-symbols-outlined:hover::after {
-    opacity: 1;/* A tooltip szöveg feltüntetése hover esemény bekövetkezteként */
+  opacity: 1;/* A tooltip szöveg feltüntetése hover esemény bekövetkezteként */
 }
 
 .PostDiv {
-    width: 80%;
-    height: 100%;
-    margin-left: auto;
-    display: grid;
-    grid-template-columns: 840px 290px;
-    grid-template-rows: repeat(5, 1fr);
-    background: none;
+  height: 100%;
+  display: grid;
+  grid-template-columns: 840px 290px;
 }   
 
 .Posts {
@@ -641,12 +644,6 @@ body:has(.left.expanded) {
     outline: none;
 }
 
-.main {
-  display: flex;
-  justify-content: center;
-  align-items: flex-start;
-}
-
 .profileInformation {
   display: grid;
   grid-template-columns: 840px 290px;
@@ -724,7 +721,7 @@ body:has(.left.expanded) {
   margin-bottom: 10px;
 }
 
-hr {
+.userFeed hr {
   all: unset; 
   background-color: rgba(0, 0, 0, 0.05); 
   width: calc(100% + 40px); 
@@ -769,10 +766,19 @@ hr {
   width: 40px; 
   height: 40px; 
   border-radius: 50%;
+  overflow: hidden; /* A divből való "kifolyás" blokkolása */
+  border: 2px solid black;
 }
 
 .recommendedUser button {
-  all: unset; padding: 6px 12px; border-radius: 6px; cursor: pointer; background-color: rgb(226, 226, 226); box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); display: flex; justify-content: center; align-items: center;
+  all: unset; 
+  padding: 6px 12px; 
+  border-radius: 6px; cursor: pointer; 
+  background-color: rgb(226, 226, 226); 
+  box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); 
+  display: flex; 
+  justify-content: center; 
+  align-items: center;
 }
 
 .recommendedUser span {
