--- a/css/dark-mode css/loginform.css
+++ b/css/dark-mode css/loginform.css
@@ -107,12 +107,48 @@ a {
     justify-content: center;
 }
 
-.formDiv .password input[type=button] {
+.formDiv password input[type=button] {
     all: unset;
-    width: 35px;
+    width: 40px;
     height: 33px;
     cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-image: url('../../Icons/visibility.svg');
     background-size: cover;
     background-repeat: no-repeat;
+    background-color: rgb(252, 252, 252);
+}
+
+.password {
+    display: flex;
+    justify-content: center;
+    height: 35px;
+    width: 100%;
+    box-sizing: border-box;
+}
+
+.input {
+    font-size: 17px;
+    color: black;
+    border: none;
+    border-radius: 5px 0px 0px 5px;
+    padding: 8px;
+    box-sizing: border-box;
+}
+
+.button {
+    border: none;
+    text-decoration: none;
+    font-size: 17px;
+    color: black;
+    cursor: pointer;
+    box-sizing: border-box;
+    width: 50px;
+    height: 36px;
+}
+
+.input:focus {
+    outline: none;
 }
