--- a/css/light-mode css/light-mode home.css
+++ b/css/light-mode css/light-mode home.css
@@ -1086,3 +1086,40 @@ a {
   font-style: none;
   color: #666;
 }
+
+@media only screen and (max-width: 600px) {
+
+  body {
+    grid-template-columns: 0px 0fr;
+  }
+
+  .left {
+    display: none;
+  }
+
+  .top-left {
+    display: none;
+  }
+
+  .PostDiv {
+    display: block;
+    width: 56.2vh;
+  }
+
+  .top {
+    width: 100%;
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .recommendationDivs {
+    display: none;
+  }
+
+  .rightSideDiv {
+    display: none;
+  }
+
+}
