--- a/css/dark-mode css/dark-mode home.css
+++ b/css/dark-mode css/dark-mode home.css
@@ -210,17 +210,18 @@
       opacity: 0;
     }
   }
-
+  
+input[type=text]{
+    background-color: rgb(24, 24, 24);
+    background-image: url();
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+}
 
 body {
   margin: 0;
   height: 100vh;
-  display: grid;
-  grid-template-columns: 50px 1fr;
-  grid-template-rows: 50px 1fr;
-  grid-template-areas:
-      "top-left top"
-      "left main";
+  width: 100%;
   font-family: "Roboto", serif;
   font-optical-sizing: auto;
   font-weight: 400;
@@ -231,75 +232,27 @@ body {
   transition: background-color 0.3s ease, color 0.3s ease, grid-template-columns 0.3s ease;
 }
 
-body:has(.left.expanded) {
-  grid-template-columns: 200px 1fr;
-}
-
-.top-left {
-  grid-area: top-left;
-  background-color: #1d1d1d;
-  z-index: 2;
-  transition: background-color 0.3s ease;
-}
-
-.top {
-  grid-area: top;
-  background-color: #1d1d1d;
-  box-shadow: 1px 0 5px rgba(0, 0, 0, 0.1);
-  z-index: 1;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-}
-
-.top h1 {
-  color: rgb(192, 192, 192);
-  margin: 0;
-  font-weight: 500;
-  transition: color 0.3s ease;
-}
-
-.left {
-  grid-area: left;
-  background-color: #1d1d1d;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-wrap: nowrap;
-  flex-direction: column;
-  gap: 20px;
-  box-shadow: 1px 0 3px rgba(0, 0, 0, 0.1);
-  z-index: 1;
-  transition: background-color 0.3s ease, box-shadow 0.3s ease;
-  position: sticky;
-  top: 0;
-  height: 100vh;
-  overflow: hidden;
-}
-
-.left-icons {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  position: fixed;
-  gap: 50px;
-}
-
-.left-icons hr {
-  width: 50px;
-  max-width: 70%;
-  height: 2px;
-  background-color: #C0C0C0;
-  border: 0px solid black;
-  transition: background-color 0.3s ease;
-}
-
 .link-size {
   width: 50px;
   height: 50px;
+}
+
+nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: wrap;
+  height: 50px;
+  background-color: #1d1d1d;
+  box-shadow: 1px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+nav .left-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
 }
 
 .main {
@@ -313,43 +266,19 @@ body:has(.left.expanded) {
 }
 
 .left-icons .material-symbols-outlined {
-  font-size: 35px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 50px;
   height: 50px;
   transition: background-color 0.5s ease, color 0.3s ease;
   overflow: hidden;
 }
 
 .left-icons .material-symbols-outlined:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+  width: 50px;
   cursor: pointer;
-  transition: 0.2s;
-  background-color: rgba(255, 255, 255, 0.1);
-  cursor: pointer;
-  transition: background-color 0.4s ease;
-}
-
-/* Tooltip szöveg */
-.left-icons .material-symbols-outlined::after {
-  content: attr(data-tooltip); /* A data-tooltip attribútum felhasználása a hovernek szükséges szövegnek */
-  position: absolute;
-  left: 100%;
-  background-color: #000000;
-  color: #ffffff;
-  padding: 5px 10px;
-  border-radius: 4px;
-  font-size: 14px;
-  white-space: nowrap; /* A szöveg letiltása a wrappeléstől */
-  opacity: 0; /* A szöveg eltüntetése alapból */
-  pointer-events: none; /* A tooltip letiltása a hover letiltásáról */
-  transition: opacity 0.3s ease;
-  margin-left: 10px;
-}
-
-.left-icons .material-symbols-outlined:hover::after {
-  opacity: 1;/* A tooltip szöveg feltüntetése hover esemény bekövetkezteként */
 }
 
 .PostDiv {
@@ -364,7 +293,7 @@ body:has(.left.expanded) {
     grid-column: 1/2;
     background-color: #1d1d1d;
     padding: 20px;
-    height: 100%;
+    height: 100vh;
     overflow-y: auto;
     transition: background-color 0.3s ease;
     overflow: hidden;
@@ -407,18 +336,6 @@ body:has(.left.expanded) {
     height: 65px;
 }
 
-.postPfp {
-    border-radius: 100%;
-    overflow: hidden; /* A divből való "kifolyás" letiltása */
-    border: 2px solid #C0C0C0;
-    width: 65px; 
-    height: 65px; 
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-    background-image: url('../../jonkler.webp');
-}
-
 .postUsername {
   display: flex; 
   flex-wrap: wrap; 
@@ -435,7 +352,6 @@ body:has(.left.expanded) {
 .userPostInfo span {
     font-size: 1.1em;
     font-weight: 500;
-    color: rgb(192, 192, 192);
 }
 
 .more-icon {
@@ -450,7 +366,7 @@ body:has(.left.expanded) {
 }
 
 .more-icon:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .more-icon img {
@@ -460,76 +376,69 @@ body:has(.left.expanded) {
 
 .postText {
     margin: 15px 0;
-    line-height: 1.5; 
+    line-height: 1.5;
     font-size: 0.95em;
 }
 
-.mentions {
-    margin: 15px 0;
-    color: black;
-    font-size: 0.9em;
-}
-
-.mentions span {
-    word-spacing: 8px;
-    color: purple
-}
-
 .Comments {
-  margin-top: 20px;
-  padding-top: 15px;
-  border-top: 1px solid rgba(255, 255, 255, 0.05);
-  display: none;
-  transition: all 0.3s ease-in-out;
+    margin-top: 20px;
+    padding-top: 15px;
+    border-top: 1px solid rgba(0, 0, 0, 0.05);
+    display: none;
+    transition: all 0.3s ease-in-out;
 }
 
 .comment-wrapper {
-  position: relative;
-  width: 100%;
+    position: relative;
+    width: 100%;
 }
 
 .comment-area {
-  width: 100%;
-  height: 40px;
-  min-height: 40px;
-  max-height: 150px;
-  padding: 10px 45px 10px 15px;
-  border: 1px solid rgb(192, 192, 192);
-  border-radius: 5px;
-  background-color: rgb(49, 49, 49);
-  resize: none;
-  outline: none;
-  font-family: inherit;
-  font-size: 0.95em;
-  box-sizing: border-box;
-  overflow-y: hidden; /* A divből való "kifolyás" letiltása az y tengelyen*/
-  transition: background-color 0.2s;
-  color: rgb(192, 192, 192);
+    width: 100%;
+    height: 40px;
+    min-height: 40px;
+    max-height: 150px;
+    padding: 10px 45px 10px 15px;
+    border: 1px solid rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+    background-color: rgb(197, 196, 196);
+    resize: none;
+    outline: none;
+    font-family: inherit;
+    font-size: 0.95em;
+    line-height: 1.4;
+    box-sizing: border-box;
+    overflow-y: hidden; /* A divből való "kifolyás" letiltása az y tengelyen*/
+    transition: background-color 0.2s;
 }
 
 /* A "scrollbar"-nak stílus adásához használt pseudo-element (::-webkit-scrollbar)*/
 .comment-area::-webkit-scrollbar {
-  width: 8px;
+    width: 8px;
 }
 
 .comment-area::-webkit-scrollbar-track {
-  background: transparent;
+    background: transparent;
 }
 
 .comment-area::-webkit-scrollbar-thumb {
-  background-color: rgba(255, 255, 255, 0.2);
-  border-radius: 4px;
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+}
+
+.comment-area:focus {
+    background-color: rgb(200, 200, 200);
 }
 
 .comment-area::placeholder {
-  color: rgb(192, 192, 192);
+    color: black;
 }
 
 .comment-controls {
-  position: absolute;
-  right: 12px;
-  top: 50%;
-  transform: translateY(-55%);
+    position: absolute;
+    right: 12px;
+    top: 50%;
+    transform: translateY(-55%);
 }
 
 .Comments {
@@ -538,7 +447,6 @@ body:has(.left.expanded) {
 .Comments.expanded {
   display: block;
 }
-
 .comments-toggle {
   all: unset;
   margin-top: 10px;
@@ -551,20 +459,20 @@ body:has(.left.expanded) {
   flex-wrap: nowrap;
   flex-direction: row;
 }
+
 .send-button {
-  all: unset;
-  cursor: pointer;
-  padding: 3px;
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  transition: background-color 0.2s;
+    all: unset;
+    cursor: pointer;
+    padding: 3px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: background-color 0.2s;
 }
 
-
 .send-button:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+    background-color: rgba(0, 0, 0, 0.1);
 }
 
 .send-button img {
@@ -573,7 +481,7 @@ body:has(.left.expanded) {
 }
 
 ::placeholder {
-    color: rgb(192, 192, 192);
+    color: black;
 }
 
 .input-wrapper {
@@ -620,39 +528,48 @@ body:has(.left.expanded) {
 
 /* From Uiverse.io by deepak16375 */ 
 .searchBar {
-    display: flex;
-    justify-content: center;
-    height: 35px;
-    width: 100%; /* Ensure it takes the full width of its container */
-    box-sizing: border-box; /* Include padding and border in the element's total width */
+  display: flex;
+  justify-content: center;
+  height: 35px;
+  width: 100%; /* Ensure it takes the full width of its container */
+  box-sizing: border-box; /* Include padding and border in the element's total width */
 }
 
 .input {
-    font-size: 17px;
-    color: black;
-    border: none;
-    border-top-left-radius: .5em;
-    border-bottom-left-radius: .5em;
-    padding: 8px; /* Add padding for better spacing */
-    box-sizing: border-box; /* Include padding in the element's total width */
-    width: calc(100% - 50px); /* Adjust width to account for the button */
+  font-size: 17px;
+  color: rgb(192, 192, 192);
+  border: none;
+  border-top-left-radius: .5em;
+  border-bottom-left-radius: .5em;
+  padding: 8px; /* Add padding for better spacing */
+  box-sizing: border-box; /* Include padding in the element's total width */
+  width: calc(100% - 50px); /* Adjust width to account for the button */
 }
 
 .button {
-    border: none;
-    text-decoration: none;
-    padding: 8px 15px; /* Adjust padding for better spacing */
-    font-size: 17px;
-    color: black;
-    border-top-right-radius: .5em;
-    border-bottom-right-radius: .5em;
-    cursor: pointer;
-    box-sizing: border-box; /* Include padding in the element's total width */
-    width: 50px; /* Fixed width for the button */
+  border: none;
+  text-decoration: none;
+  padding: 8px 15px; /* Adjust padding for better spacing */
+  font-size: 17px;
+  color: black;
+  border-top-right-radius: .5em;
+  border-bottom-right-radius: .5em;
+  cursor: pointer;
+  box-sizing: border-box; /* Include padding in the element's total width */
+  width: 50px; /* Fixed width for the button */
+  background-color: rgb(20, 20, 20);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  outline: none;
 }
 
 .input:focus {
-    outline: none;
+  outline: none;
+}
+
+.input::placeholder {
+    color: rgb(192, 192, 192);
 }
 
 .profileInformation {
@@ -679,20 +596,6 @@ body:has(.left.expanded) {
   grid-row: 1/3;
   grid-column: 1/9;
   background-color: rgb(128, 128, 128);
-}
-
-.profilePicture {
-  z-index: 2;
-  grid-row: 2/4;
-  grid-column: 4/6;
-  background-image: url('../../jonkler.webp');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  border: 7px solid #E2E2E2;
-  width: 200px;
-  height: 200px;
-  border-radius: 50%;
 }
 
 .leftInformation {
@@ -725,7 +628,7 @@ body:has(.left.expanded) {
 
 .userFeed hr {
   all: unset; 
-  background-color: rgba(255, 255, 255, 0.05); 
+  background-color: rgba(0, 0, 0, 0.05); 
   width: calc(100% + 40px); 
   height: 1px; 
   margin: 20px -20px;
@@ -733,7 +636,7 @@ body:has(.left.expanded) {
 
 .rightSideDiv hr {
   all: unset; 
-  background-color: rgba(255, 255, 255, 0.05); 
+  background-color: rgba(0, 0, 0, 0.05); 
   width: calc(100% + 40px); 
   height: 1px; 
   margin: 20px -20px;
@@ -769,7 +672,7 @@ body:has(.left.expanded) {
   height: 40px; 
   border-radius: 50%;
   overflow: hidden; /* A divből való "kifolyás" blokkolása */
-  border: 2px solid #C0C0C0;
+  border: 2px solid rgb(255, 255, 255);
 }
 
 .recommendedUser button {
@@ -796,12 +699,6 @@ body:has(.left.expanded) {
   margin-bottom: 20px;
 }
 
-.searchBar button {
-  display: flex; 
-  justify-content: center; 
-  align-items: center;
-}
-
 .Head {
   display: flex;
   align-items: center;
@@ -817,7 +714,7 @@ body:has(.left.expanded) {
   background-image: url('../../jonkler.webp');
   border-radius: 100%;
   overflow: hidden; /* A divből való "kifolyás" blokkolása */
-  border: 2px solid #C0C0C0;
+  border: 2px solid rgb(192, 192, 192);
 }
 
 .usernames {
@@ -843,7 +740,6 @@ body:has(.left.expanded) {
   width: 45px;
 }
 
-
 .informationCenter {
   display: flex;
   align-items: center;
@@ -856,7 +752,7 @@ body:has(.left.expanded) {
 
 .userProfile hr {
   border: none;
-  background-color: rgba(255, 255, 255, 0.05); 
+  background-color: rgba(0, 0, 0, 0.05); 
   height: 1px; 
   width: 100%; 
   margin-top: auto; 
@@ -932,7 +828,7 @@ body:has(.left.expanded) {
 .recentPosts {
   display: flex; 
   align-items: center; 
-  background-color: rgb(211, 211, 211); 
+  background-color: #191919; 
   padding: 10px; 
   border-radius: 5px; 
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); 
@@ -984,13 +880,13 @@ body:has(.left.expanded) {
   width: 40px; 
   height: 40px; 
   border-radius: 50%;
-  border: 2px solid #C0C0C0;
+  border: 2px solid black;
 }
 
 .Recommended {
   display: flex; 
   align-items: center; 
-  background-color: #191919; 
+  background-color: rgb(211, 211, 211); 
   padding: 10px; 
   border-radius: 5px; 
   box-shadow: 2px 2px 5px 1px rgba(0, 0, 0, 0.1); 
@@ -1064,53 +960,12 @@ body:has(.left.expanded) {
   background-color: #aaa;
 } 
 
-/* From Uiverse.io by deepak16375 */ 
-.searchBar {
-  display: flex;
-  justify-content: center;
-  height: 35px;
-  width: 100%; /* Ensure it takes the full width of its container */
-  box-sizing: border-box; /* Include padding and border in the element's total width */
-}
-
-.input {
-  font-size: 17px;
-  color: rgb(192, 192, 192);
-  border: none;
-  border-top-left-radius: .5em;
-  border-bottom-left-radius: .5em;
-  padding: 8px; /* Add padding for better spacing */
-  box-sizing: border-box; /* Include padding in the element's total width */
-  width: calc(100% - 50px); /* Adjust width to account for the button */
-}
-
-.button {
-  border: none;
-  text-decoration: none;
-  padding: 8px 15px; /* Adjust padding for better spacing */
-  font-size: 17px;
-  color: rgb(192, 192, 192);
-  border-top-right-radius: .5em;
-  border-bottom-right-radius: .5em;
-  cursor: pointer;
-  box-sizing: border-box; /* Include padding in the element's total width */
-  width: 50px; /* Fixed width for the button */
-  background-color: rgb(20, 20, 20);
-}
-
-.input:focus {
-  outline: none;
-}
-
-input[type=text]{
-  background-color: rgb(24, 24, 24);
-  background-image: url();
-  background-position: 10px 10px; 
-  background-repeat: no-repeat;
-}
-
 a {
   text-decoration: none;
   font-style: none;
   color: #666;
+}
+
+.searchIcon {
+   display: none;
 }
