--- a/css/light-mode css/light-mode phonehome.css
+++ b/css/light-mode css/light-mode phonehome.css
@@ -55,6 +55,19 @@
     .Posts {
       width: 100%;
       height: 100%;
+      padding: 0;
+      background-color: transparent;
+    }
+    .Post {
+      padding: 10px;
+      background-color: rgb(226, 226, 226);
+      box-shadow: none;
+    }
+    .profilePicture {
+      border-radius: 50%;
+    }
+    .userPostInfo {
+      gap: 5px;
     }
     .postText {
       text-align: justify;
